test/syntax/fail/not_combinatorial/fun_merge.sync
type state = S0 | S1
let f x =
  merge x
    (S0 -> 0)
    (S1 -> 1)
